<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grades">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/status"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFinalGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/final_grade"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <LinearLayout
        android:id="@+id/lyCourses"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFinalGrade">

        <TextView
            android:id="@+id/tvTitleCourses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_courses"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvMath"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_math"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPhy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_phy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_bio"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_hys"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvChem"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_chem"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyGrades"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lyCourses"
        app:layout_constraintTop_toBottomOf="@+id/tvFinalGrade">

        <TextView
            android:id="@+id/tvGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/grade"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etMath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/title_math"
            android:ems="10"
            android:hint="@string/title_math"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etPhy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/title_phy"
            android:ems="10"
            android:hint="@string/title_phy"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/title_bio"
            android:ems="10"
            android:hint="@string/title_bio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etHys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/title_hys"
            android:ems="10"
            android:hint="@string/title_hys"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etChem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/title_chem"
            android:ems="10"
            android:hint="@string/title_chem"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnFinalGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_first"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>